--- a/posts/nifty-crosses-25000-sensex-soars-market-rallies-on-positive-cues.mdx
+++ b/posts/nifty-crosses-25000-sensex-soars-market-rallies-on-positive-cues.mdx
@@ -10,6 +10,7 @@ tags:
   - "Nifty50"
 category: "market-news"
 author: "Vipin Bihari"
+featured: true
 heroImage: "/images/uploads/nifty-crosses-25000-sensex-soars-market-rallies-on-positive-cues/market-rally-bull.jpg"
 heroImagePrompt: "A vibrant green bull charging upwards on a stock market graph, with the BSE tower and a glowing Nifty 25000 sign in the background. Palette: green, blue, gold. Art style: dynamic digital art. Camera angle: low angle looking up. Lighting: bright, optimistic. —ar 16:9"
 ---
