--- a/posts/stock-market-101-investing-journey-day-1.mdx
+++ b/posts/stock-market-101-investing-journey-day-1.mdx
@@ -1,5 +1,5 @@
 ---
-title: "Stock Market 101: Your Journey to Investing Begins Here (Day 1 of 15)"
+title: "Day 1: Stock Market 101: Your Journey to Investing Begins Here"
 slug: "stock-market-101-investing-journey-day-1"
 date: 2025-05-25T13:07:00Z
 excerpt: "Embark on your stock market journey! This beginner's guide explains what stocks are, why companies issue them, and the potential benefits and risks of investing. Understand the basics before you dive in."
