Update dates of eng blogs

--- a/posts/upstox-vs-zerodha-vs-groww-2025-broker-comparison.mdx
+++ b/posts/upstox-vs-zerodha-vs-groww-2025-broker-comparison.mdx
@@ -27,6 +27,7 @@ quiz:
   - q: "For a trader focused on advanced tools and a powerful platform, which broker is often highlighted?"
     options: ["Groww", "Upstox", "Zerodha"]
     answer: 1
+featured: true
 ---
 
 Choosing the right stock broker is the first, most critical step in your investment journey. In India, the discount broking space is fiercely competitive, with three names leading the charge: Upstox, Zerodha, and Groww. Each platform offers a unique combination of features, pricing, and user experience. But which one is the best for *you* in 2025?
