--- a/posts/cibil-score-explained-guide-to-good-credit.mdx
+++ b/posts/cibil-score-explained-guide-to-good-credit.mdx
@@ -27,6 +27,7 @@ quiz:
   - q: "How often can you officially check your CIBIL report for free?"
     options: ["Once a month", "Once a year from each credit bureau", "Never, it's always paid"]
     answer: 1
+featured: true
 ---
 
 Ever applied for a credit card or a small loan and been asked for your "CIBIL score"? It can feel like a mysterious financial report card that everyone—from banks to landlords—seems to care about. But what exactly is it, and why does this three-digit number hold so much power over your financial life?
