--- a/posts/digital-gold-vs-gold-etfs-vs-sgbs-best-gold-investment-2025.mdx
+++ b/posts/digital-gold-vs-gold-etfs-vs-sgbs-best-gold-investment-2025.mdx
@@ -27,6 +27,7 @@ quiz:
   - q: "What extra return do SGBs offer besides gold price appreciation?"
     options: ["A monthly dividend", "A 2.5% annual interest", "A loyalty bonus"]
     answer: 1
+featured: true
 ---
 
 For generations, Indians have trusted gold. It's not just for weddings and festivals; it's a smart investment that can protect your money from inflation and diversify your portfolio. But buying jewellery is no longer the only, or even the best, way to own gold.
