update all image

--- a/posts/south-korea-derivatives-market-lesson-for-india.mdx
+++ b/posts/south-korea-derivatives-market-lesson-for-india.mdx
@@ -11,7 +11,7 @@ tags:
   - "Trading"
   - "Nifty"
 category: "market-news"
-author: "Vipin"
+author: "Vipin Bihari"
 heroImage: "/images/uploads/south-korea-derivatives-market-lesson-for-india/hero-image.jpg"
 heroImagePrompt: "JUST LEAVE THIS AS IT IS"
 quiz:
