--- a/posts/borrowing-to-invest-stock-market-trap.mdx
+++ b/posts/borrowing-to-invest-stock-market-trap.mdx
@@ -10,7 +10,7 @@ tags:
   - "Stock Market"
   - "Leverage"
 category: "fundamental-analysis"
-author: "Vipin"
+author: "Vipin Bihari"
 heroImage: "/images/uploads/borrowing-to-invest-stock-market-trap/hero-image.jpg"
 heroImagePrompt: "JUST LEAVE THIS AS IT IS"
 quiz:
