--- a/posts/indian-markets-snap-5-day-losing-streak-icici-bank-q2-results-october-2024.mdx
+++ b/posts/indian-markets-snap-5-day-losing-streak-icici-bank-q2-results-october-2024.mdx
@@ -90,10 +90,10 @@ Some heavyweights struggled:
 
 ## What This Means for Retail Investors
 
-- ✅ Banking stocks remain attractive
-- ✅ Diversify to reduce volatility
-- ✅ Avoid panic selling — stay invested
-- ✅ Earnings drive stock performance
+- Banking stocks remain attractive
+- Diversify to reduce volatility
+- Avoid panic selling — stay invested
+- Earnings drive stock performance
 
 ## What to Watch Next
 
@@ -114,7 +114,7 @@ Some heavyweights struggled:
 
 Monday's rally was fueled by **strong fundamentals** — particularly ICICI Bank’s performance. But volatility may persist due to FII outflows and mixed global signals. 
 
-👉 **Stay focused on high-quality businesses and maintain diversification**.
+**Stay focused on high-quality businesses and maintain diversification**.
 
 ---
 
