--- a/posts/indian-markets-snap-5-day-losing-streak-icici-bank-q2-results-october-2024.mdx
+++ b/posts/indian-markets-snap-5-day-losing-streak-icici-bank-q2-results-october-2024.mdx
@@ -4,12 +4,12 @@ slug: "indian-markets-snap-5-day-losing-streak-icici-bank-q2-results-october-202
 date: 2024-10-28T15:30:00Z
 excerpt: "Sensex surges 603 points and Nifty reclaims 24,300 as banking stocks lead a massive comeback on Monday, October 28, 2024. ICICI Bank's 14.5% profit jump and improving asset quality spark investor confidence after a brutal week of losses."
 tags:
-  - market-news
-  - banking-stocks
-  - earnings-results
-  - icici-bank
-  - sensex
-  - nifty
+  - "market-news"
+  - "banking-stocks"
+  - "earnings-results"
+  - "icici-bank"
+  - "sensex"
+  - "nifty"
 category: "market-news"
 author: "Vipin Bihari"
 heroImage: "/images/uploads/indian-markets-snap-5-day-losing-streak-icici-bank-q2-results-october-2024/hero-image.jpg"
