--- a/posts/bajaj-finance-q2-earnings-npa-stress.mdx
+++ b/posts/bajaj-finance-q2-earnings-npa-stress.mdx
@@ -4,15 +4,14 @@ slug: "bajaj-finance-q2-earnings-npa-stress"
 date: 2025-11-11T15:30:00.000Z
 excerpt: "Bajaj Finance's strong Q2 earnings couldn't withstand a sharp guidance cut and rising NPA concerns. The stock crashed 7% as investors reassess the NBFC's near-term growth prospects amid emerging stress in MSME and two-wheeler lending."
 tags:
-  - "quarterly-results"
-  - "fundamental-analysis"
-  - "market-news"
-  - "nifty-stocks"
-  - "nbfc"
+  - "quarterly results"
+  - "fundamental analysis"
+  - "market news"
+  - "nifty stocks"
 category: "fundamental-analysis"
 author: "Vipin Bihari"
 heroImage: "/images/uploads/bajaj-finance-q2-earnings-npa-stress/hero-image.jpg"
-heroImagePrompt: ""
+heroImagePrompt: "null"
 quiz:
   - q: "By what percentage did Bajaj Finance revise its AUM growth guidance for FY26?"
     options: ["From 24-25% to 22-23%", "From 25-26% to 23-24%", "From 26-27% to 24-25%"]
